@@ -1,3 +1,11 @@
+2011-01-19  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* TestFramework/gnustep-tests:
+	* TestFramework/runtest.sh:
+	* TestFramework/Summary.sh:
+	Portability fixes for systems where grep has limited functionality
+	and/or where the shell's builtin 'test' command is limited/faulty.
+
 2011-01-18  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* gnustep-config.in:
